--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 	<!-- WRAPPER -->
 	<div class="wrapper">
 		<!-- NAVBAR -->
-		<nav class="navbar navbar-default " role="navigation">
+<!-- added extra nonsense -->
+<div class="container">
+
+		<nav class="navbar navbar-default " role="navigation" style="background-color: green;">
 			<div class="container">
 				<!-- TOPBAR -->
 				<div class="topbar">
@@ -77,7 +80,7 @@
 						<i class="fa fa-bars"></i>
 					</button>
 					<a href="index.html" class="navbar-brand navbar-logo navbar-logo-bigger">
-						<img src="assets/img/logo/observer-logo.png" alt="Observer Mobility logo">
+						<img src="assets/img/logo/observer-new-logo.png" alt="Observer Mobility logo">
 					</a>
 				</div>
 				<!-- MAIN NAVIGATION -->
@@ -118,7 +121,9 @@
 			</div>
 		</nav>
 		<!-- END NAVBAR -->
+</div>
 		<!-- HERO UNIT -->
+<div class="container">
 		<section class="hero-unit-slider slider-responsive" style="margin-top: 45px;">
 			<div id="carousel-hero" class="slick-carousel">
 				<div class="carousel-inner" role="listbox">
@@ -149,6 +154,7 @@
 				</div>
 			</div>
 		</section>
+</div>
 		<!-- END HERO UNIT -->
 		<!-- INTRO -->
 		<section>
