--- a/accessories.html
+++ b/accessories.html
@@ -98,8 +98,14 @@
 								</li>
 							</ul>
 						</li>
-						<li>
-							<a href="news.html">NEWS</a>
+						<li class="dropdown ">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">GALLERY<i class="fa fa-angle-down"></i></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="videos.html">Videos</a></li>
+								<li class="dropdown ">
+									<a href="pictures.html">Pictures</a>
+								</li>
+							</ul>
 						</li>
 						<li class="dropdown ">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">CONTACT US<i class="fa fa-angle-down"></i></a>
