--- a/index2.html
+++ b/index2.html
@@ -9,10 +9,10 @@
 	<meta name="author" content="www.EveryDayKenneth.com">
 	<!-- CSS -->
 	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
-	<link href="assets/css/font-awesome.css" rel="stylesheet" type="text/css">
+	<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/main.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/my-custom-styles.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/skins/slategray.css" rel="stylesheet" type="text/css"> <!-- your skin -->
+    <link href="assets/css/skins/lightgreen.css" rel="stylesheet" type="text/css"> <!-- your skin -->
 	
 	<!-- IE 9 Fallback-->
 	<!--[if IE 9]>
@@ -22,11 +22,11 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400italic,700,400,300' rel='stylesheet' type='text/css'>
 	<!-- FAVICONS -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/newLogo/color144x144.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/newLogo/color114x114.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/newLogo/color72x72.png">
-	<link rel="apple-touch-icon-precomposed" href="assets/ico/newLogo/color57x57.png">
-	<link rel="shortcut icon" href="assets/ico/newLogo/colorfavicon.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/observer144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/observer114x114.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/observer72x72.png">
+	<link rel="apple-touch-icon-precomposed" href="assets/ico/observer57x57.png">
+	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
 </head>
 
 <body>
@@ -41,43 +41,160 @@
 						<i class="fa fa-bars"></i>
 					</button>
 					<a href="index.html" class="navbar-brand navbar-logo">
-						<img src="assets/img/logo/color.png" alt="Observer Mobility Logo">
+						<img src="assets/img/logo/observer-logo.png" alt="Observer Mobility Logo">
 					</a>
 				</div>
 				<!-- MAIN NAVIGATION -->
-				<div id="main-nav" class="navbar-collapse collapse" style="padding: 25px;">
+				<div id="main-nav" class="navbar-collapse collapse navbar-mega-menu">
 					<ul class="nav navbar-nav navbar-right">
-						<li>
-							<a href="index.html">HOME</a>
-						</li>
-						<li>
-							<a href="aboutus.html">ABOUT</a>
+						<li class="dropdown active">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">HOME <i class="fa fa-angle-down"></i></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="index.html">Home v1</a></li>
+								<li><a href="index-v1_dark-header.html">Home v1 Dark Header</a></li>
+								<li><a href="index-v1_light-footer.html">Home v1 Light Footer</a></li>
+								<li class="active"><a href="#">Home v2</a></li>
+								<li><a href="index-v2_dark-header.html">Home v2 Dark Header</a></li>
+								<li><a href="index-v3.html">Home v3</a></li>
+								<li><a href="index-v4_fullscreen.html">Home v4 Fullscreen</a></li>
+								<li><a href="index-v5_fullscreen_slider.html">Home v5 Fullscreen Slider</a></li>
+								<li class="dropdown ">
+									<a href="#">Blog Home <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-right"></i></a>
+									<ul class="dropdown-menu" role="menu">
+										<li><a href="blog/index-blog-v1.html">Blog Home v1</a></li>
+										<li><a href="blog/index-blog-v2.html">Blog Home v2</a></li>
+									</ul>
+								</li>
+								<li><a href="one-page/index.html">One Page</a></li>
+							</ul>
 						</li>
 						<li class="dropdown ">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">PRODUCTS  <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-down"></i></a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">FEATURES  <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-down"></i></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="4x4ElectricWheelchairs.html">4X4 Electric Wheelchairs</a></li>
+								<li><a href="feature-navigation-menu.html">Navigation Menus</a></li>
+								<li><a href="feature-hero-unit.html">Hero Units</a></li>
+								<li><a href="feature-page-header.html">Page Header</a></li>
+								<li><a href="feature-footer.html">Footers</a></li>
 								<li class="dropdown ">
-									<a href="accessories.html">Accessories <span class="label label-danger label-main-nav">NEW</span></a>
+									<a href="#">Email Templates <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-right"></i></a>
+									<ul class="dropdown-menu" role="menu">
+										<li><a href="email-templates/email-template-v1/email-template-v1.html">Email Template v1</a></li>
+										<li><a href="email-templates/email-template-v2/email-template-v2.html">Email Template v2</a></li>
+									</ul>
 								</li>
 							</ul>
 						</li>
 						<li class="dropdown ">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">GALLERY<i class="fa fa-angle-down"></i></a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <i class="fa fa-angle-down"></i></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="videos.html">Videos</a></li>
+								<li><a href="page-services.html">Service Page</a></li>
+								<li><a href="page-pricing-tables.html">Pricing Tables</a></li>
 								<li class="dropdown ">
-									<a href="pictures.html">Pictures</a>
+									<a href="#">Columns <i class="fa fa-angle-right"></i></a>
+									<ul class="dropdown-menu" role="menu">
+										<li><a href="page-left-sidebar.html">Left Sidebar</a></li>
+										<li><a href="page-right-sidebar.html">Right Sidebar</a></li>
+										<li><a href="page-double-sidebar.html">Double Sidebar</a></li>
+									</ul>
+								</li>
+								<li><a href="page-search-results.html">Search Result</a></li>
+								<li><a href="page-support.html">Support</a></li>
+								<li><a href="page-faq.html">FAQ</a></li>
+								<li><a href="page-about-us.html">About Us</a></li>
+								<li><a href="page-contacts.html">Contact</a></li>
+								<li><a href="page-privacy.html">Privacy Policy</a></li>
+								<li><a href="page-terms.html">Terms</a></li>
+								<li><a href="page-error.html">Error Page</a></li>
+								<li class="dropdown ">
+									<a href="#">Sub Menu Lvl 1 <i class="fa fa-angle-right"></i></a>
+									<ul class="dropdown-menu" role="menu">
+										<li class="dropdown ">
+											<a href="#">Sub Menu Lvl 2 <i class="fa fa-angle-right"></i></a>
+											<ul class="dropdown-menu" role="menu">
+												<li><a href="#">Sub Menu Lvl 3</a></li>
+												<li><a href="#">Sub Menu Lvl 3</a></li>
+											</ul>
+										</li>
+										<li><a href="#">Sub Menu Lvl 2</a></li>
+										<li><a href="#">Sub Menu Lvl 2</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li class="dropdown mega-menu">
+							<a href="#" data-toggle="dropdown">UI ELEMENTS <i class="fa fa-angle-down"></i></a>
+							<ul class="dropdown-menu mega-menu-container">
+								<li>
+									<div class="mega-menu-content">
+										<div class="row">
+											<div class="col-md-3">
+												<h5 class="menu-heading">Buttons &amp; Icons</h5>
+												<ul class="list-unstyled list-menu">
+													<li><a href="ui-buttons.html"><i class="fa fa-square"></i> General Buttons</a></li>
+													<li><a href="ui-button-groups.html"><i class="fa fa-clone"></i> Button Groups</a></li>
+													<li><a href="ui-icons.html"><i class="fa fa-asterisk"></i> Icons</a></li>
+												</ul>
+											</div>
+											<div class="col-md-3">
+												<h5 class="menu-heading">Forms</h5>
+												<ul class="list-unstyled list-menu">
+													<li><a href="ui-form-elements-basic.html"><i class="fa fa-check-square"></i> Basic Form Elements</a></li>
+													<li><a href="ui-form-elements-advanced.html"><i class="fa fa-plus-square"></i> Advanced Form Elements</a></li>
+													<li><a href="ui-form-layouts.html"><i class="fa fa-columns"></i> Form Layouts</a></li>
+													<li><a href="ui-form-validation.html"><i class="fa fa-check-circle"></i> Validation</a></li>
+												</ul>
+											</div>
+											<div class="col-md-3">
+												<h5 class="menu-heading">Content Elements</h5>
+												<ul class="list-unstyled list-menu">
+													<li><a href="ui-tabs-accordion.html"><i class="fa fa-list-alt"></i> Tabs &amp; Accordion</a></li>
+													<li><a href="ui-boxed-contents.html"><i class="fa fa-suitcase"></i> Boxed Contents</a></li>
+													<li><a href="ui-numbers-charts.html"><i class="fa fa-pie-chart"></i> Numbers &amp; Charts</a></li>
+													<li><a href="ui-typography.html"><i class="fa fa-font"></i> Typography</a></li>
+												</ul>
+											</div>
+											<div class="col-md-3">
+												<h5 class="menu-heading">Components</h5>
+												<ul class="list-unstyled list-menu">
+													<li><a href="ui-testimonials.html"><i class="fa fa-thumbs-up"></i> Testimonials</a></li>
+													<li><a href="ui-maps.html"><i class="fa fa-map"></i> Maps</a></li>
+													<li><a href="ui-breadcrumbs.html"><i class="fa fa-angle-right"></i> Breadcrumbs</a></li>
+													<li><a href="ui-alerts.html"><i class="fa fa-warning"></i> Alerts</a></li>
+													<li><a href="ui-pagination.html"><i class="fa fa-ellipsis-h"></i> Pagination</a></li>
+												</ul>
+											</div>
+										</div>
+									</div>
 								</li>
 							</ul>
 						</li>
 						<li class="dropdown ">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">CONTACT US<i class="fa fa-angle-down"></i></a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">PORTFOLIO <i class="fa fa-angle-down"></i></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="customersupport.html">Customer Support </a></li>
-								<li class="dropdown ">
-									<a href="contactUs.html">Contact Us <span class="label label-danger label-main-nav">NEW</span></a>
-								</li>
+								<li><a href="portfolio-4-columns.html">Portfolio 4 Columns</a></li>
+								<li><a href="portfolio-3-columns.html">Portfolio 3 Columns</a></li>
+								<li><a href="portfolio-2-columns.html">Portfolio 2 Columns</a></li>
+								<li><a href="portfolio-single.html">Portfolio Item</a></li>
+							</ul>
+						</li>
+						<li class="dropdown ">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">SHOP <i class="fa fa-angle-down"></i></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="shop/index.html">Front Page</a></li>
+								<li><a href="shop/single-product-page.html">Single Product Page</a></li>
+								<li><a href="shop/product-filter-grid.html">Search Result with Filter</a></li>
+								<li><a href="shop/checkout.html">Checkout with Validation</a></li>
+								<li><a href="shop/shop-login.html">Login</a></li>
+								<li><a href="shop/shop-register.html">Register</a></li>
+							</ul>
+						</li>
+						<li class="dropdown ">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">BLOG <i class="fa fa-angle-down"></i></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="blog-medium-thumbnail.html">Blog Medium Thumbnail</a></li>
+								<li><a href="blog-full-thumbnail.html">Blog Full Thumbnail</a></li>
+								<li><a href="blog-single.html">Blog Single</a></li>
+								<li><a href="blog-single-full.html">Blog Single Full</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -161,21 +278,21 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="boxed-content">
-							<i class="fa fa-heartbeat"></i>
+							<i class="fa fa-flag"></i>
 							<h2 class="boxed-content-title">GOAL ORIENTED</h2>
 							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="boxed-content">
-							<i class="fa fa-user-plus"></i>
+							<i class="fa fa-globe"></i>
 							<h2 class="boxed-content-title">GLOBAL SERVICE</h2>
 							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="boxed-content">
-							<i class="fa fa-spinner"></i>
+							<i class="fa fa-cog"></i>
 							<h2 class="boxed-content-title">DYNAMIC CHANGE</h2>
 							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
 						</div>
