--- a/pictures.html
+++ b/pictures.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-	<title>Observer Mobility: 4x4 Electric Wheelchairs</title>
+	<title>Gallery | Observer Mobility</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Observer Mobility: 4x4 Electric Wheelchairs">
-	<meta name="author" content="www.EveryDayKenneth.com">
+	<meta name="description" content="Responsive Multipurpose Bootstrap Theme">
+	<meta name="author" content="The Develovers">
 	<!-- CSS -->
 	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -21,11 +21,11 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400italic,700,400,300' rel='stylesheet' type='text/css'>
 	<!-- FAVICONS -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/observer144x144.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/observer114x114.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/observer72x72.png">
-	<link rel="apple-touch-icon-precomposed" href="assets/ico/observer57x57.png">
-	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/repute144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
+	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
+	<link rel="shortcut icon" href="assets/ico/favicon.png">
 </head>
 
 <body>
@@ -71,13 +71,13 @@
 					</div>
 				</div>
 				<!-- END TOPBAR -->
-				<div class="navbar-header" style="padding-bottom: 50px;">
+				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav">
 						<span class="sr-only">Toggle Navigation</span>
 						<i class="fa fa-bars"></i>
 					</button>
 					<a href="index.html" class="navbar-brand navbar-logo navbar-logo-bigger">
-						<img src="assets/img/logo/observer-logo.png" alt="Repute - Responsive Multipurpose Bootstrap Theme">
+						<img src="assets/img/logo/repute-logo-nav.png" alt="Repute - Responsive Multipurpose Bootstrap Theme">
 					</a>
 				</div>
 				<!-- MAIN NAVIGATION -->
@@ -125,11 +125,11 @@
 		<!-- BREADCRUMBS -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">PRODUCTS</h1>
+				<h1 class="page-title pull-left">PORTFOLIO</h1>
 				<ol class="breadcrumb">
 					<li><a href="#">Home</a></li>
-					<li><a href="#">Products</a></li>
-					<li class="active">4x4 Electric Wheelchairs</li>
+					<li><a href="#">Portfolio</a></li>
+					<li class="active">Portfolio Item</li>
 				</ol>
 			</div>
 		</div>
@@ -137,91 +137,78 @@
 		<!-- PAGE CONTENT -->
 		<div class="page-content">
 			<div class="container">
-				<!-- ITEM FILTERS -->
-				<ul class="list-inline portfolio-item-filters">
-					<li><a class="active" href="#" data-filter="*">ALL</a></li>
-					<li><a href="#" data-filter=".design">MAXIMUS</a></li>
-					<li><a href="#" data-filter=".photography">OFF ROAD</a></li>
-					<li><a href="#" data-filter=".ui">OPTIMUS</a></li>
-					<li><a href="#" data-filter=".ux">R-SERIES</a></li>
-				</ul>
-				<!-- END ITEM FILTERS -->
-				<!-- PORTFOLIO ITEM WRAPPER -->
-				<div class="portfolio-item-wrapper">
-					<ul class="portfolio-item-list portfolio-isotope portfolio-nospace list-col-4">
-						<li class="portfolio-item design">
-							<div class="overlay"></div>
-							<div class="info">
-								<h4 class="title">Maximus</h4>
-								<p class="brief-description">OB-EW-001</p>
-								<a href="OB-EW-001.html" class="btn">learn more</a>
-							</div>
-							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/OB-EW-001.png" alt="The Maximux 800x800 thumbnail">
-							</div>
-						</li>
-						<li class="portfolio-item photography">
-							<div class="overlay"></div>
-							<div class="info">
-								<h4 class="title">Off Road</h4>
-								<p class="brief-description">OB-EW-002</p>
-								<a href="OB-EW-002.html" class="btn">learn more</a>
-							</div>
-							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/OB-EW-002.png" alt="The Off Road 800x800 thumbnail">
-							</div>
-						</li>
-						<li class="portfolio-item ui">
-							<div class="overlay"></div>
-							<div class="info">
-								<h4 class="title">Optimus</h4>
-								<p class="brief-description">OB-EW-003</p>
-								<a href="OB-EW-003.html" class="btn">learn more</a>
-							</div>
-							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/OB-EW-003.jpg" alt="Optimus 800x800 thumbnail">
-							</div>
-						</li>
-						<li class="portfolio-item ux">
-							<div class="overlay"></div>
-							<div class="info">
-								<h4 class="title">R-020</h4>
-								<p class="brief-description">OB-EW-020</p>
-								<a href="OB-EW-020.html" class="btn">learn more</a>
-							</div>
-							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/OB-EW-020.jpg" alt="Portfolio Thumbnail">
+				<!-- PORTFOLIO ITEM -->
+				<div class="portfolio-media media-carousel">
+					<div><img src="assets/img/portfolio/single/bicycle.jpg" class="img-responsive" alt="Portfolio Item"></div>
+					<div><img src="assets/img/portfolio/single/blurred_lines.jpg" class="img-responsive" alt="Portfolio Item"></div>
+					<div><img src="assets/img/portfolio/single/edge.jpg" class="img-responsive" alt="Portfolio Item"></div>
+				</div>
+				<div class="row">
+					<div class="col-md-8">
+						<section>
+							<h2 class="section-heading">PROJECT DESCRIPTION</h2>
+							<p class="lead">Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products.</p>
+							<p>Dynamically syndicate open-source content through global potentialities. Proactively cultivate optimal potentialities after bricks-and-clicks technologies. Compellingly empower extensible benefits and holistic bandwidth. Professionally expedite client-based schemas before resource-leveling vortals. Professionally enable customer directed intellectual capital via highly efficient convergence. Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products. Compellingly harness viral ideas through wireless services. Holisticly utilize future-proof networks rather than granular communities. Proactively.</p>
+						</section>
+					</div>
+					<div class="col-md-4">
+						<section>
+							<h2 class="section-heading">PROJECT DETAIL</h2>
+							<ul class="list-unstyled project-detail-list">
+								<li><strong>Title:</strong> Awesome Photography</li>
+								<li><strong>Client:</strong> Digital House Inc.</li>
+								<li><strong>Skills:</strong> Photography, Lightroom, Photoshop</li>
+								<li><strong>Categories:</strong> <a href="#">Photography</a>, <a href="#">Corporate</a> </li>
+							</ul>
+							<a href="#" class="btn btn-default"><i class="fa fa-external-link"></i> Visit Website</a>
+						</section>
+					</div>
+				</div>
+				<!-- END PORTFOLIO ITEM -->
+				<hr>
+				<!-- RELATED PORTFOLIO -->
+				<div class="portfolio-item-wrapper portfolio-related">
+					<h2 class="section-heading">RELATED WORKS</h2>
+					<ul class="portfolio-item-list spaced row">
+						<li class="col-md-4">
+							<div class="portfolio-item">
+								<div class="overlay"></div>
+								<div class="info">
+									<h4 class="title">The Guitar</h4>
+									<a href="#" class="btn">read more</a>
+								</div>
+								<div class="media-wrapper">
+									<img src="assets/img/portfolio/800x500/work1.png" alt="This is the description">
+								</div>
 							</div>
 						</li>
-						<li class="portfolio-item ux">
-							<div class="overlay"></div>
-							<div class="info">
-								<h4 class="title">R-030</h4>
-								<p class="brief-description">OB-EW-030</p>
-								<a href="OB-EW-030.html" class="btn">learn more</a>
-							</div>
-							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/OB-EW-030.jpg" alt="Portfolio Thumbnail">
+						<li class="col-md-4">
+							<div class="portfolio-item">
+								<div class="overlay"></div>
+								<div class="info">
+									<h4 class="title">Skyscraper</h4>
+									<a href="#" class="btn">read more</a>
+								</div>
+								<div class="media-wrapper">
+									<img src="assets/img/portfolio/800x500/work3.png" alt="Portfolio Thumbnail">
+								</div>
 							</div>
 						</li>
-
-
+						<li class="col-md-4">
+							<div class="portfolio-item">
+								<div class="overlay"></div>
+								<div class="info">
+									<h4 class="title">Heaven</h4>
+									<a href="#" class="btn">read more</a>
+								</div>
+								<div class="media-wrapper">
+									<img src="assets/img/portfolio/800x500/work4.png" alt="Portfolio Thumbnail">
+								</div>
+							</div>
+						</li>
 					</ul>
 				</div>
-				<!-- END PORTFOLIO ITEM WRAPPER -->
-				<!-- PAGINATION -->
-<!-- 				<div class="text-center">
-					<ul class="pagination">
-						<li><a href="#"><i class="fa fa-angle-left"></i><span class="sr-only">Previous</span></a></li>
-						<li><a href="#">1</a></li>
-						<li class="active"><a href="#">2</a></li>
-						<li><a href="#">3</a></li>
-						<li><a href="#">4</a></li>
-						<li><a href="#">5</a></li>
-						<li><a href="#"><i class="fa fa-angle-right"></i><span class="sr-only">Next</span></a></li>
-					</ul>
-				</div> -->
-				<!-- END PAGINATION -->
+				<!-- END RELATED PORTFOLIO -->
 			</div>
 		</div>
 		<!-- END PAGE CONTENT -->
@@ -232,7 +219,7 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/observer-logo.png" class="logo" alt="Repute">
+						<img src="assets/img/logo/repute-logo-light.png" class="logo" alt="Repute">
 						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p>
 						<br>
 						<address class="margin-bottom-30px">
@@ -299,7 +286,7 @@
 			</div>
 			<!-- COPYRIGHT -->
 			<div class="text-center copyright">
-				&copy;2016 Observer Mobility. All Rights Reserved.
+				&copy;2016 The Develovers. All Rights Reserved.
 			</div>
 			<!-- END COPYRIGHT -->
 		</footer>
@@ -309,7 +296,7 @@
 	<!-- JAVASCRIPTS -->
 	<script src="assets/js/jquery-2.1.1.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
-	<script src="assets/js/plugins/isotope/isotope.pkgd.js"></script>
+	<script src="assets/js/plugins/slick/slick.min.js"></script>
 	<script src="assets/js/plugins/autohidingnavbar/jquery.bootstrap-autohidingnavbar.min.js"></script>
 	<script src="assets/js/repute-scripts.js"></script>
 	
