background image changed and homepage styled

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<span class="sr-only">Toggle Navigation</span>
 						<i class="fa fa-bars"></i>
 					</button>
-					<a href="index.html" class="navbar-brand navbar-logo">
+					<a href="index.html" class="navbar-brand navbar-logo" style="margin-bottom: 45px;">
 						<img src="assets/img/logo/color.png" alt="Observer Mobility Logo">
 					</a>
 				</div>
@@ -95,7 +95,7 @@
 						<div class="container">
 							<div class="hero-left pull-left">
 								<div class="hero-text">
-									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn">CLEAN &amp; ELEGANT DESIGN</h2>
+									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn" style="color: #4aaf56;">CLEAN &amp; ELEGANT DESIGN</h2>
 									<p class="lead animation-delay-7" data-animation="animated fadeIn">Giving valuable reputation and credibility to your business</p>
 								</div>
 								<a href="#" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
@@ -109,7 +109,7 @@
 						<div class="container">
 							<div class="hero-left pull-left">
 								<div class="hero-text">
-									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn">ULTRA RESPONSIVE</h2>
+									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn" style="color: #4aaf56;">ULTRA RESPONSIVE</h2>
 									<p class="lead animation-delay-7" data-animation="animated fadeIn">Leave it to the theme, it knows how to deal with screen sizes</p>
 								</div>
 								<a href="#" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
@@ -123,7 +123,7 @@
 						<div class="container">
 							<div class="hero-left pull-left">
 								<div class="hero-text">
-									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn">EASY TO CUSTOMIZE</h2>
+									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn" style="color: #4aaf56;">EASY TO CUSTOMIZE</h2>
 									<p class="lead animation-delay-7" data-animation="animated fadeIn">Readable code, well documented and FREE support</p>
 								</div>
 								<a href="#" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
