fontawesome icons changed and added description. Featured products changed as well.

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 						<div class="container">
 							<div class="hero-left pull-left">
 								<div class="hero-text">
-									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn" style="color: #4aaf56;">CLEAN &amp; ELEGANT DESIGN</h2>
-									<p class="lead animation-delay-7" data-animation="animated fadeIn">Giving valuable reputation and credibility to your business</p>
+									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn" style="color: #4aaf56;">GO WHEREVER YOU WISH</h2>
+									<p class="lead animation-delay-7" data-animation="animated fadeIn">Explore areas you never dreamed possible</p>
 								</div>
-								<a href="#" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
+								<a href="4x4ElectricWheelchairs.html" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
 							</div>
 							<div class="hero-right pull-right">
-								<img src="assets/img/hero-unit-obj.png" class="animation-delay-9" data-animation="animated fadeInRight" alt="Repute Business Theme">
+								<img src="assets/img/hero-unit-chair1.png" class="animation-delay-9" data-animation="animated fadeInRight" alt="Repute Business Theme">
 							</div>
 						</div>
 					</div>
@@ -109,13 +109,13 @@
 						<div class="container">
 							<div class="hero-left pull-left">
 								<div class="hero-text">
-									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn" style="color: #4aaf56;">ULTRA RESPONSIVE</h2>
-									<p class="lead animation-delay-7" data-animation="animated fadeIn">Leave it to the theme, it knows how to deal with screen sizes</p>
+									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn" style="color: #4aaf56;">THE PERFECT ALL TERRAIN VEHICLE</h2>
+									<p class="lead animation-delay-7" data-animation="animated fadeIn">Let the Observer  show you what it can do</p>
 								</div>
-								<a href="#" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
+								<a href="4x4ElectricWheelchairs.html" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
 							</div>
 							<div class="hero-right pull-right">
-								<img src="assets/img/hero-unit-obj2.png" class="animation-delay-9" data-animation="animated fadeInRight" alt="Repute Business Theme">
+								<img src="assets/img/hero-unit-chair2.png" class="animation-delay-9" data-animation="animated fadeInRight" alt="Repute Business Theme">
 							</div>
 						</div>
 					</div>
@@ -123,13 +123,13 @@
 						<div class="container">
 							<div class="hero-left pull-left">
 								<div class="hero-text">
-									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn" style="color: #4aaf56;">EASY TO CUSTOMIZE</h2>
-									<p class="lead animation-delay-7" data-animation="animated fadeIn">Readable code, well documented and FREE support</p>
+									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn" style="color: #4aaf56;">THE OBSERVER MAKES YOU MORE INDEPENDENT</h2>
+									<p class="lead animation-delay-7" data-animation="animated fadeIn">Anywhere you want, anytime you want, without limitations</p>
 								</div>
-								<a href="#" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
+								<a href="4x4ElectricWheelchairs.html" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
 							</div>
 							<div class="hero-right pull-right">
-								<img src="assets/img/hero-unit-obj3.png" class="animation-delay-9" data-animation="animated fadeInRight" alt="Repute Business Theme">
+								<img src="assets/img/hero-unit-chair3.jpg" class="animation-delay-9" data-animation="animated fadeInRight" alt="Repute Business Theme">
 							</div>
 						</div>
 					</div>
@@ -161,23 +161,23 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="boxed-content">
-							<i class="fa fa-heartbeat"></i>
-							<h2 class="boxed-content-title">GOAL ORIENTED</h2>
-							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
+							<i class="fa fa-wheelchair-alt"></i>
+							<h2 class="boxed-content-title">All TERRAIN</h2>
+							<p>The Observer works on roads which traditional wheelchairs simply can't. The Observer was engineered to handle rain, sand, mud, trails and much more.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="boxed-content">
-							<i class="fa fa-user-plus"></i>
-							<h2 class="boxed-content-title">GLOBAL SERVICE</h2>
-							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
-						</div>
+							<i class="fa fa-compass"></i>
+							<h2 class="boxed-content-title">ADJUSTING GRADIENTER EQUIPMENT</h2>
+							<p>When driving up and down stairs or hills, the Observer will keep your body in the same upright position as if driving along a flat surface. The Observer makes driving more comfortable and safe. Stairs and steps are not a problem for the Observer.</p>
+						</div> 
 					</div>
 					<div class="col-md-4">
 						<div class="boxed-content">
-							<i class="fa fa-spinner"></i>
+							<i class="fa fa-universal-access"></i>
 							<h2 class="boxed-content-title">DYNAMIC CHANGE</h2>
-							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
+							<p>Our engineers crated the perfect balance of modern technology, power, stability and reliability for each Observer model. Whatever your situation, we will open new possibilities for mobility.</p>
 						</div>
 					</div>
 				</div>
@@ -187,39 +187,39 @@
 		<!-- CAROUSEL -->
 		<section class="recent-works slick-carousel">
 			<div class="container">
-				<h2 class="section-heading">RECENT WORKS</h2>
+				<h2 class="section-heading">FEATURED PRODUCTS</h2>
 				<div class="portfolio-container">
 					<div class="portfolio-item">
 						<div class="overlay"></div>
 						<div class="info">
-							<h4 class="title">Raining</h4>
-							<p class="brief-description">Photography</p>
+							<h4 class="title">MAXIMUS</h4>
+							<p class="brief-description">OB-EW-001</p>
 							<a href="#" class="btn">read more</a>
 						</div>
 						<div class="media-wrapper">
-							<img src="assets/img/portfolio/800x500/work5.png" alt="Item Thumbnail" />
+							<img src="assets/img/portfolio/800x500/001-green.jpg" alt="Item Thumbnail" />
 						</div>
 					</div>
 					<div class="portfolio-item">
 						<div class="overlay"></div>
 						<div class="info">
-							<h4 class="title">Perfect Edge</h4>
-							<p class="brief-description">Product Design</p>
+							<h4 class="title">OFF ROAD</h4>
+							<p class="brief-description">OB-EW-002</p>
 							<a href="#" class="btn">read more</a>
 						</div>
 						<div class="media-wrapper">
-							<img src="assets/img/portfolio/800x500/work6.png" alt="Item Thumbnail" />
+							<img src="assets/img/portfolio/800x500/002-blue.jpg" alt="Item Thumbnail" />
 						</div>
 					</div>
 					<div class="portfolio-item">
 						<div class="overlay"></div>
 						<div class="info">
-							<h4 class="title">Sunny Day</h4>
-							<p class="brief-description">Story</p>
+							<h4 class="title">OPTIMUS</h4>
+							<p class="brief-description">OB-EW-003</p>
 							<a href="#" class="btn">read more</a>
 						</div>
 						<div class="media-wrapper">
-							<img src="assets/img/portfolio/800x500/work7.png" alt="Item Thumbnail" />
+							<img src="assets/img/portfolio/800x500/003-blue.jpg" alt="Item Thumbnail" />
 						</div>
 					</div>
 					<div class="portfolio-item">
@@ -293,30 +293,7 @@
 			</div>
 		</section>
 		<!-- END TESTIMONIAL -->
-		<!-- OUR CLIENTS -->
-		<section class="clients">
-			<div class="container">
-				<h2 class="section-heading">OUR CLIENTS</h2>
-				<ul class="list-inline list-client-logo">
-					<li>
-						<a href="#"><img src="assets/img/clients/logo1.png" alt="logo" /></a>
-					</li>
-					<li>
-						<a href="#"><img src="assets/img/clients/logo2.png" alt="logo" /></a>
-					</li>
-					<li>
-						<a href="#"><img src="assets/img/clients/logo3.png" alt="logo" /></a>
-					</li>
-					<li>
-						<a href="#"><img src="assets/img/clients/logo4.png" alt="logo" /></a>
-					</li>
-					<li>
-						<a href="#"><img src="assets/img/clients/logo5.png" alt="logo" /></a>
-					</li>
-				</ul>
-			</div>
-		</section>
-		<!-- END OUR CLIENTS -->
+
 		<!-- CALL-TO-ACTION -->
 		<section class="call-to-action">
 			<div class="container">
