--- a/index.html
+++ b/index.html
@@ -222,28 +222,6 @@
 							<img src="assets/img/portfolio/800x500/003-blue.jpg" alt="Item Thumbnail" />
 						</div>
 					</div>
-					<div class="portfolio-item">
-						<div class="overlay"></div>
-						<div class="info">
-							<h4 class="title">Rainy Day</h4>
-							<p class="brief-description">Photography</p>
-							<a href="#" class="btn">read more</a>
-						</div>
-						<div class="media-wrapper">
-							<img src="assets/img/portfolio/800x500/work2.png" alt="Item Thumbnail" />
-						</div>
-					</div>
-					<div class="portfolio-item">
-						<div class="overlay"></div>
-						<div class="info">
-							<h4 class="title">Water Everywhere</h4>
-							<p class="brief-description">Story</p>
-							<a href="#" class="btn">read more</a>
-						</div>
-						<div class="media-wrapper">
-							<img src="assets/img/portfolio/800x500/work4.png" alt="Item Thumbnail" />
-						</div>
-					</div>
 				</div>
 			</div>
 		</section>
@@ -276,23 +254,6 @@
 			</div>
 		</section>
 		<!-- END BRIEF ABOUT -->
-		<!-- TESTIMONIAL -->
-		<section class="testimonial-fancy">
-			<div class="container">
-				<div class="testimonial-body">
-					<h2 class="sr-only">TESTIMOMIAL</h2>
-					<i class="fa fa-quote-left"></i>
-					<p class="testimonial-bubble">
-						Credibly extend parallel relationships after clicks-and-mortar content. Credibly pontificate team building alignments rather than diverse quality vectors. Monotonectally benchmark business communities for distinctive mindshare.
-					</p>
-					<div class="testimonial-author">
-						<img src="assets/img/user2.png" alt="Author" class="pull-left">
-						<span><span class="author-name">Antonius</span> <em>CEO of TheCompany</em></span>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- END TESTIMONIAL -->
 
 		<!-- CALL-TO-ACTION -->
 		<section class="call-to-action">
@@ -313,15 +274,15 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/repute-logo-light.png" class="logo" alt="Repute">
-						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p>
+						<img src="assets/img/logo/black.png" class="logo" alt="Repute">
+						<p>The Observer wants to prove that there are no inaccessible places. You will be convinced that this is the electric wheelchair for you.</p>
 						<br>
 						<address class="margin-bottom-30px">
 							<ul class="list-unstyled">
-								<li>1234 North Main Street
-									<br/> New York, NY 222222</li>
+								<li>1 Infinite Loop
+									<br/> Cupertino, CA 95014</li>
 								<li>Phone: (1800) 765 - 4321</li>
-								<li>Email: email@yourdomain.com</li>
+								<li>Email: contact@observermobility.com</li>
 							</ul>
 						</address>
 						<!-- END COLUMN 1 -->
@@ -332,20 +293,18 @@
 						<div class="row margin-bottom-30px">
 							<div class="col-xs-6">
 								<ul class="list-unstyled footer-nav">
-									<li><a href="#">About Us</a></li>
-									<li><a href="#">News</a></li>
-									<li><a href="#">Community</a></li>
-									<li><a href="#">Career</a></li>
-									<li><a href="#">Blog</a></li>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="about.html">About</a></li>
+									<li><a href="4x4ElectricWheelchairs.html">4x4 Electric Wheelchairs</a></li>
+									<li><a href="accessories.html">Accessories</a></li>
+									<li><a href="videos.html">Videos</a></li>
 								</ul>
 							</div>
 							<div class="col-xs-6">
 								<ul class="list-unstyled footer-nav">
-									<li><a href="#">Press Kit</a></li>
-									<li><a href="#">FAQ</a></li>
-									<li><a href="#">Terms</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-									<li><a href="#">Contact Us</a></li>
+									<li><a href="pictures.html">Pictures</a></li>
+									<li><a href="customersupport.html">Customer Support</a></li>
+									<li><a href="contactus.html">Contact Us</a></li>
 								</ul>
 							</div>
 						</div>
@@ -355,7 +314,7 @@
 						<!-- COLUMN 3 -->
 						<div class="newsletter">
 							<h3 class="footer-heading">NEWSLETTER</h3>
-							<p>Get the latest update from us by subscribing to our newsletter.</p>
+							<p>Get the latest Observer Mobility update by subscribing to our newsletter.</p>
 							<form class="newsletter-form" method="POST">
 								<div class="input-group input-group-lg">
 									<input type="email" class="form-control" name="email" placeholder="youremail@domain.com">
@@ -369,9 +328,8 @@
 							<h3 class="footer-heading">GET CONNECTED</h3>
 							<ul class="list-inline social-icons">
 								<li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" class="googleplus-bg"><i class="fa fa-google-plus"></i></a></li>
-								<li><a href="#" class="rss-bg"><i class="fa fa-rss"></i></a></li>
+								<li><a href="#" class="twitter-bg"><i class="fa fa-linkedin"></i></a></li>
+								<li><a href="#" class="googleplus-bg"><i class="fa fa-wechat"></i></a></li>
 							</ul>
 						</div>
 						<!-- END COLUMN 3 -->
