social icons updated

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				<div class="row">
 					<div class="col-md-6">
 						<h2 class="section-heading">WHO WE ARE</h2>
-						<img src="assets/img/business-people.png" class="inline-img" alt="Who We Are">
+						<img src="assets/img/observer-gus.jpg" class="inline-img" alt="Who We Are">
 						<p>Compellingly actualize excellent users and distinctive leadership skills. Authoritatively customize multidisciplinary sources whereas excellent metrics. Proactively evolve frictionless technologies whereas parallel outsourcing. Interactively productivate cross functional methodologies with visionary e-business. Appropriately generate diverse "outside the box" thinking whereas cutting-edge deliverables. Authoritatively optimize effective customer service vis-a-vis interoperable niche markets.</p>
 						<p>Rapidiously facilitate distributed action items vis-a-vis an expanded array of applications. Monotonectally procrastinate quality content without interdependent "outside the box" thinking. Holisticly syndicate enterprise infrastructures without magnetic methods of empowerment. Professionally evisculate high-quality collaboration and idea-sharing rather than bricks-and-clicks quality vectors. Globally administrate strategic customer service before inexpensive value. Rapidiously enhance cross-platform e-tailers via clicks-and-mortar models. Intrinsicly envisioneer.</p>
 						<br>
@@ -262,7 +262,7 @@
 					<h2 class="section-heading">GET IN TOUCH</h2>
 				</div>
 				<div class="pull-right">
-					<span>Call us at (1800) 765 - 4321 or</span>&nbsp;&nbsp;<a href="#" class="btn btn-lg btn-primary">CONTACT US</a>
+					<span>Call us at (1800) 765 - 4321 or</span>&nbsp;&nbsp;<a href="contactus.html" class="btn btn-lg btn-primary">CONTACT US</a>
 				</div>
 			</div>
 		</section>
