framework of OM done

--- a/customersupport.html
+++ b/customersupport.html
@@ -12,6 +12,7 @@
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/main.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/my-custom-styles.css" rel="stylesheet" type="text/css">
+	<link href="assets/css/skins/slategray.css" rel="stylesheet" type="text/css"> <!-- your skin -->
 	
 	<!-- IE 9 Fallback-->
 	<!--[if IE 9]>
@@ -37,38 +38,9 @@
 				<!-- TOPBAR -->
 				<div class="topbar">
 					<ul class="list-inline top-nav">
-						<li>
-							<div class="btn-group">
-								<button type="button" class="btn btn-link dropdown-toggle btn-xs" data-toggle="dropdown"><img src="assets/img/flags/United-Kingdom.png" alt="United Kingdom"> United Kingdom <span class="caret"></span></button>
-								<ul class="dropdown-menu dropdown-menu-right country-selector" role="menu">
-									<li>
-										<a href="#"><img src="assets/img/flags/United-Kingdom.png" alt="United Kingdom"> United Kingdom</a>
-									</li>
-									<li>
-										<a href="#"><img src="assets/img/flags/Japan.png" alt="Japan"> Japan</a>
-									</li>
-									<li>
-										<a href="#"><img src="assets/img/flags/China.png" alt="China"> China</a>
-									</li>
-									<li>
-										<a href="#"><img src="assets/img/flags/Germany.png" alt="Germany"> Germany</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<li><a href="#">Help</a></li>
-						<li><a href="#">Support</a></li>
+
 					</ul>
-					<div class="searchbox">
-						<form method="post">
-							<div class="input-group input-group-sm">
-								<input type="text" class="form-control" placeholder="search ...">
-								<span class="input-group-btn">
-									<button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
-								</span>
-							</div>
-						</form>
-					</div>
+
 				</div>
 				<!-- END TOPBAR -->
 				<div class="navbar-header">
@@ -77,7 +49,7 @@
 						<i class="fa fa-bars"></i>
 					</button>
 					<a href="index.html" class="navbar-brand navbar-logo navbar-logo-bigger">
-						<img src="assets/img/logo/observer-logo.png" alt="Repute - Responsive Multipurpose Bootstrap Theme">
+						<img src="assets/img/logo/color.png" alt="Observer Mobility Logo">
 					</a>
 				</div>
 				<!-- MAIN NAVIGATION -->
@@ -127,9 +99,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">CUSTOMER SUPPORT</h1>
 				<ol class="breadcrumb">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">UI Elements</a></li>
-					<li><a href="#">Forms</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li class="active">Customer Support</li>
 				</ol>
 			</div>
@@ -300,15 +270,15 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/observer-logo.png" class="logo" alt="Repute">
-						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p>
+						<img src="assets/img/logo/black.png" class="logo" alt="Repute">
+						<p>The Observer wants to prove that there are no inaccessible places. You will be convinced that this is the electric wheelchair for you.</p>
 						<br>
 						<address class="margin-bottom-30px">
 							<ul class="list-unstyled">
-								<li>1234 North Main Street
-									<br/> New York, NY 222222</li>
+								<li>1 Infinite Loop
+									<br/> Cupertino, CA 95014</li>
 								<li>Phone: (1800) 765 - 4321</li>
-								<li>Email: email@yourdomain.com</li>
+								<li>Email: contact@observermobility.com</li>
 							</ul>
 						</address>
 						<!-- END COLUMN 1 -->
@@ -319,20 +289,18 @@
 						<div class="row margin-bottom-30px">
 							<div class="col-xs-6">
 								<ul class="list-unstyled footer-nav">
-									<li><a href="#">About Us</a></li>
-									<li><a href="#">News</a></li>
-									<li><a href="#">Community</a></li>
-									<li><a href="#">Career</a></li>
-									<li><a href="#">Blog</a></li>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="about.html">About</a></li>
+									<li><a href="4x4ElectricWheelchairs.html">4x4 Electric Wheelchairs</a></li>
+									<li><a href="accessories.html">Accessories</a></li>
+									<li><a href="videos.html">Videos</a></li>
 								</ul>
 							</div>
 							<div class="col-xs-6">
 								<ul class="list-unstyled footer-nav">
-									<li><a href="#">Press Kit</a></li>
-									<li><a href="#">FAQ</a></li>
-									<li><a href="#">Terms</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-									<li><a href="#">Contact Us</a></li>
+									<li><a href="pictures.html">Pictures</a></li>
+									<li><a href="customersupport.html">Customer Support</a></li>
+									<li><a href="contactus.html">Contact Us</a></li>
 								</ul>
 							</div>
 						</div>
@@ -342,7 +310,7 @@
 						<!-- COLUMN 3 -->
 						<div class="newsletter">
 							<h3 class="footer-heading">NEWSLETTER</h3>
-							<p>Get the latest update from us by subscribing to our newsletter.</p>
+							<p>Get the latest Observer Mobility update by subscribing to our newsletter.</p>
 							<form class="newsletter-form" method="POST">
 								<div class="input-group input-group-lg">
 									<input type="email" class="form-control" name="email" placeholder="youremail@domain.com">
@@ -356,9 +324,8 @@
 							<h3 class="footer-heading">GET CONNECTED</h3>
 							<ul class="list-inline social-icons">
 								<li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" class="googleplus-bg"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" class="rss-bg"><i class="fa fa-wechat"></i></a></li>
+								<li><a href="#" class="twitter-bg"><i class="fa fa-linkedin"></i></a></li>
+								<li><a href="#" class="googleplus-bg"><i class="fa fa-wechat"></i></a></li>
 							</ul>
 						</div>
 						<!-- END COLUMN 3 -->
