home page images changed

--- a/accessories.html
+++ b/accessories.html
@@ -99,7 +99,7 @@
 				<h1 class="page-title pull-left">ACCESSORIES</h1>
 				<ol class="breadcrumb">
 					<li><a href="index.html">Home</a></li>
-					<li class="active">Accesories</li>
+					<li class="active">Accessories</li>
 				</ol>
 			</div>
 		</div>
@@ -320,7 +320,7 @@
 							<div class="col-xs-6">
 								<ul class="list-unstyled footer-nav">
 									<li><a href="index.html">Home</a></li>
-									<li><a href="about.html">About</a></li>
+									<li><a href="aboutus.html">About</a></li>
 									<li><a href="4x4ElectricWheelchairs.html">4x4 Electric Wheelchairs</a></li>
 									<li><a href="accessories.html">Accessories</a></li>
 									<li><a href="videos.html">Videos</a></li>
@@ -330,7 +330,7 @@
 								<ul class="list-unstyled footer-nav">
 									<li><a href="pictures.html">Pictures</a></li>
 									<li><a href="customersupport.html">Customer Support</a></li>
-									<li><a href="contactus.html">Contact Us</a></li>
+									<li><a href="contactUs.html">Contact Us</a></li>
 								</ul>
 							</div>
 						</div>
