--- a/index.html
+++ b/index.html
@@ -161,21 +161,24 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="boxed-content">
-							<i class="fa fa-wheelchair-alt"></i>
+<img src="assets/img/101.jpg" class="inline-img" alt="Who We Are">
+							<!-- <i class="fa fa-wheelchair-alt"></i> -->
 							<h2 class="boxed-content-title">All TERRAIN</h2>
 							<p>The Observer works on roads which traditional wheelchairs simply can't. The Observer was engineered to handle rain, sand, mud, trails and much more.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="boxed-content">
-							<i class="fa fa-compass"></i>
+<img src="assets/img/102.jpg" class="inline-img" alt="Image set to 520x340">
+							<!-- <i class="fa fa-compass"></i> -->
 							<h2 class="boxed-content-title">ADJUSTING GRADIENTER EQUIPMENT</h2>
 							<p>When driving up and down stairs or hills, the Observer will keep your body in the same upright position as if driving along a flat surface. The Observer makes driving more comfortable and safe. Stairs and steps are not a problem for the Observer.</p>
 						</div> 
 					</div>
 					<div class="col-md-4">
 						<div class="boxed-content">
-							<i class="fa fa-universal-access"></i>
+<img src="assets/img/103.jpg" class="inline-img" alt="Who We Are">
+							<!-- <i class="fa fa-universal-access"></i> -->
 							<h2 class="boxed-content-title">DYNAMIC CHANGE</h2>
 							<p>Our engineers crated the perfect balance of modern technology, power, stability and reliability for each Observer model. Whatever your situation, we will open new possibilities for mobility.</p>
 						</div>
@@ -294,7 +297,7 @@
 							<div class="col-xs-6">
 								<ul class="list-unstyled footer-nav">
 									<li><a href="index.html">Home</a></li>
-									<li><a href="about.html">About</a></li>
+									<li><a href="aboutus.html">About</a></li>
 									<li><a href="4x4ElectricWheelchairs.html">4x4 Electric Wheelchairs</a></li>
 									<li><a href="accessories.html">Accessories</a></li>
 									<li><a href="videos.html">Videos</a></li>
@@ -304,7 +307,7 @@
 								<ul class="list-unstyled footer-nav">
 									<li><a href="pictures.html">Pictures</a></li>
 									<li><a href="customersupport.html">Customer Support</a></li>
-									<li><a href="contactus.html">Contact Us</a></li>
+									<li><a href="contactUs.html">Contact Us</a></li>
 								</ul>
 							</div>
 						</div>
