--- a/videos.html
+++ b/videos.html
@@ -96,7 +96,7 @@
 		<!-- END NAVBAR -->
 		<!-- BREADCRUMBS -->
 		<div class="page-header">
-			<div class="container">
+			<div class="container" style="margin-top: 30px;">
 				<h1 class="page-title pull-left">VIDEOS</h1>
 				<ol class="breadcrumb">
 					<li><a href="index.html">Home</a></li>
@@ -210,7 +210,7 @@
 							<div class="col-xs-6">
 								<ul class="list-unstyled footer-nav">
 									<li><a href="index.html">Home</a></li>
-									<li><a href="about.html">About</a></li>
+									<li><a href="aboutus.html">About</a></li>
 									<li><a href="4x4ElectricWheelchairs.html">4x4 Electric Wheelchairs</a></li>
 									<li><a href="accessories.html">Accessories</a></li>
 									<li><a href="videos.html">Videos</a></li>
@@ -220,7 +220,7 @@
 								<ul class="list-unstyled footer-nav">
 									<li><a href="pictures.html">Pictures</a></li>
 									<li><a href="customersupport.html">Customer Support</a></li>
-									<li><a href="contactus.html">Contact Us</a></li>
+									<li><a href="contactUs.html">Contact Us</a></li>
 								</ul>
 							</div>
 						</div>
