Silicon Battery Accessories page template set

--- a/accessories.html
+++ b/accessories.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Observer Mobility | Accessories</title>
+	<title>Observer Mobility | Accessories &amp; Spare Parts</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Observer Mobility">
@@ -96,10 +96,10 @@
 		<!-- BREADCRUMBS -->
 		<div class="page-header">
 			<div class="container" style="margin-top: 30px">
-				<h1 class="page-title pull-left">ACCESSORIES</h1>
+				<h1 class="page-title pull-left">ACCESSORIES &amp; SPARE PARTS</h1>
 				<ol class="breadcrumb">
 					<li><a href="index.html">Home</a></li>
-					<li class="active">Accessories</li>
+					<li class="active">Accessories &amp; Spare Parts</li>
 				</ol>
 			</div>
 		</div>
