--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 								</div>
 								<a href="4x4ElectricWheelchairs.html" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
 							</div>
-							<div class="hero-right pull-right">
+<!-- 							<div class="hero-right pull-right">
 								<img src="assets/img/hero-unit-chair1.png" class="animation-delay-9" data-animation="animated fadeInRight" alt="Repute Business Theme">
-							</div>
+							</div> -->
 						</div>
 					</div>
 					<div class="item">
@@ -114,9 +114,9 @@
 								</div>
 								<a href="4x4ElectricWheelchairs.html" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
 							</div>
-							<div class="hero-right pull-right">
+<!-- 							<div class="hero-right pull-right">
 								<img src="assets/img/hero-unit-chair2.png" class="animation-delay-9" data-animation="animated fadeInRight" alt="Repute Business Theme">
-							</div>
+							</div> -->
 						</div>
 					</div>
 					<div class="item">
@@ -128,9 +128,9 @@
 								</div>
 								<a href="4x4ElectricWheelchairs.html" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
 							</div>
-							<div class="hero-right pull-right">
+<!-- 							<div class="hero-right pull-right">
 								<img src="assets/img/hero-unit-chair3.jpg" class="animation-delay-9" data-animation="animated fadeInRight" alt="Repute Business Theme">
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
