--- a/siliconBattery.html
+++ b/siliconBattery.html
@@ -12,7 +12,7 @@
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/main.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/my-custom-styles.css" rel="stylesheet" type="text/css">
-	
+	<link href="assets/css/skins/slategray.css" rel="stylesheet" type="text/css"> <!-- your skin -->
 	<!-- IE 9 Fallback-->
 	<!--[if IE 9]>
 		<link href="assets/css/ie.css" rel="stylesheet">
@@ -37,38 +37,9 @@
 				<!-- TOPBAR -->
 				<div class="topbar">
 					<ul class="list-inline top-nav">
-						<li>
-							<div class="btn-group">
-								<button type="button" class="btn btn-link dropdown-toggle btn-xs" data-toggle="dropdown"><img src="assets/img/flags/United-Kingdom.png" alt="United Kingdom"> United Kingdom <span class="caret"></span></button>
-								<ul class="dropdown-menu dropdown-menu-right country-selector" role="menu">
-									<li>
-										<a href="#"><img src="assets/img/flags/United-Kingdom.png" alt="United Kingdom"> United Kingdom</a>
-									</li>
-									<li>
-										<a href="#"><img src="assets/img/flags/Japan.png" alt="Japan"> Japan</a>
-									</li>
-									<li>
-										<a href="#"><img src="assets/img/flags/China.png" alt="China"> China</a>
-									</li>
-									<li>
-										<a href="#"><img src="assets/img/flags/Germany.png" alt="Germany"> Germany</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<li><a href="#">Help</a></li>
-						<li><a href="#">Support</a></li>
+
 					</ul>
-					<div class="searchbox">
-						<form method="post">
-							<div class="input-group input-group-sm">
-								<input type="text" class="form-control" placeholder="search ...">
-								<span class="input-group-btn">
-									<button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
-								</span>
-							</div>
-						</form>
-					</div>
+
 				</div>
 				<!-- END TOPBAR -->
 				<div class="navbar-header">
@@ -77,7 +48,7 @@
 						<i class="fa fa-bars"></i>
 					</button>
 					<a href="index.html" class="navbar-brand navbar-logo navbar-logo-bigger">
-						<img src="assets/img/logo/repute-logo-nav.png" alt="Repute - Responsive Multipurpose Bootstrap Theme">
+						<img src="assets/img/logo/color.png" alt="Observer Mobility Logo">
 					</a>
 				</div>
 				<!-- MAIN NAVIGATION -->
@@ -119,11 +90,10 @@
 		<!-- BREADCRUMBS -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">PORTFOLIO</h1>
+				<h1 class="page-title pull-left">ACCESSORIES &amp; SPARE PARTS</h1>
 				<ol class="breadcrumb">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Portfolio</a></li>
-					<li class="active">Portfolio Item</li>
+					<li><a href="index.html">Home</a></li>
+					<li class="active">Accessories &amp; Spare Parts</li>
 				</ol>
 			</div>
 		</div>
@@ -133,26 +103,26 @@
 			<div class="container">
 				<!-- PORTFOLIO ITEM -->
 				<div class="portfolio-media media-carousel">
-					<div><img src="assets/img/portfolio/single/bicycle.jpg" class="img-responsive" alt="Portfolio Item"></div>
-					<div><img src="assets/img/portfolio/single/blurred_lines.jpg" class="img-responsive" alt="Portfolio Item"></div>
-					<div><img src="assets/img/portfolio/single/edge.jpg" class="img-responsive" alt="Portfolio Item"></div>
+					<div><img src="assets/img/portfolio/800x800/accessories/silicone-power-battery.jpg" class="img-responsive" alt="Silicon Battery"></div>
+					<div><img src="assets/img/portfolio/800x800/accessories-copy/battery.jpg" class="img-responsive" alt="Silicon Battery"></div>
+					<div><img src="assets/img/portfolio/800x800/accessories/battery.jpg" class="img-responsive" alt="Silicon Battery"></div>
 				</div>
 				<div class="row">
 					<div class="col-md-8">
 						<section>
-							<h2 class="section-heading">PROJECT DESCRIPTION</h2>
+							<h2 class="section-heading">SILICON BATTERY DESCRIPTION</h2>
 							<p class="lead">Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products.</p>
 							<p>Dynamically syndicate open-source content through global potentialities. Proactively cultivate optimal potentialities after bricks-and-clicks technologies. Compellingly empower extensible benefits and holistic bandwidth. Professionally expedite client-based schemas before resource-leveling vortals. Professionally enable customer directed intellectual capital via highly efficient convergence. Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products. Compellingly harness viral ideas through wireless services. Holisticly utilize future-proof networks rather than granular communities. Proactively.</p>
 						</section>
 					</div>
 					<div class="col-md-4">
 						<section>
-							<h2 class="section-heading">PROJECT DETAIL</h2>
+							<h2 class="section-heading">SILICON BATTERY DETAILS</h2>
 							<ul class="list-unstyled project-detail-list">
-								<li><strong>Title:</strong> Awesome Photography</li>
-								<li><strong>Client:</strong> Digital House Inc.</li>
-								<li><strong>Skills:</strong> Photography, Lightroom, Photoshop</li>
-								<li><strong>Categories:</strong> <a href="#">Photography</a>, <a href="#">Corporate</a> </li>
+								<li><strong>Title:</strong> Silicon Battery </li>
+								<li><strong>Company:</strong> Observer Mobility</li>
+								<li><strong>Facts:</strong> Photography, Lightroom, Photoshop</li>
+								<li><strong>Other Facts:</strong> <a href="#">Photography</a>, <a href="#">Corporate</a> </li>
 							</ul>
 							<a href="#" class="btn btn-default"><i class="fa fa-external-link"></i> Visit Website</a>
 						</section>
@@ -161,47 +131,56 @@
 				<!-- END PORTFOLIO ITEM -->
 				<hr>
 				<!-- RELATED PORTFOLIO -->
-				<div class="portfolio-item-wrapper portfolio-related">
-					<h2 class="section-heading">RELATED WORKS</h2>
-					<ul class="portfolio-item-list spaced row">
-						<li class="col-md-4">
+		<section class="recent-works">
+			<div class="container">
+				<h2 class="section-heading pull-left">FEATURED PRODUCTS</h2>
+				<a href="4x4ElectricWheelchairs.html" class="btn btn-primary pull-right">See all products</a>
+				<div class="clearfix"></div>
+				<div class="portfolio-static">
+					<div class="row">
+						<div class="col-md-4">
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">The Guitar</h4>
-									<a href="#" class="btn">read more</a>
+									<h4 class="title">Maximus</h4>
+									<p class="brief-description">OB-EW-001</p>
+									<a href="OB-EW-001.html" class="btn">learn more</a>
 								</div>
 								<div class="media-wrapper">
-									<img src="assets/img/portfolio/800x500/work1.png" alt="This is the description">
+									<img src="assets/img/portfolio/800x500/001-green.jpg" alt="Item Thumbnail" />
 								</div>
 							</div>
-						</li>
-						<li class="col-md-4">
+						</div>
+						<div class="col-md-4">
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">Skyscraper</h4>
-									<a href="#" class="btn">read more</a>
+									<h4 class="title">Off Road</h4>
+									<p class="brief-description">OB-EW-002</p>
+									<a href="OB-EW-002.html" class="btn">learn more</a>
 								</div>
 								<div class="media-wrapper">
-									<img src="assets/img/portfolio/800x500/work3.png" alt="Portfolio Thumbnail">
+									<img src="assets/img/portfolio/800x500/002-blue.jpg" alt="Item Thumbnail" />
 								</div>
 							</div>
-						</li>
-						<li class="col-md-4">
+						</div>
+						<div class="col-md-4">
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">Heaven</h4>
-									<a href="#" class="btn">read more</a>
+									<h4 class="title">Optimus</h4>
+									<p class="brief-description">OB-EW-003</p>
+									<a href="OB-EW-003.html" class="btn">learn more</a>
 								</div>
 								<div class="media-wrapper">
-									<img src="assets/img/portfolio/800x500/work4.png" alt="Portfolio Thumbnail">
+									<img src="assets/img/portfolio/800x500/003-blue.jpg" alt="Item Thumbnail" />
 								</div>
 							</div>
-						</li>
-					</ul>
+						</div>
+					</div>
 				</div>
+			</div>
+		</section>
 				<!-- END RELATED PORTFOLIO -->
 			</div>
 		</div>
@@ -213,15 +192,15 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/repute-logo-light.png" class="logo" alt="Repute">
-						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p>
+						<img src="assets/img/logo/black.png" class="logo" alt="Repute">
+						<p>The Observer wants to prove that there are no inaccessible places. You will be convinced that this is the electric wheelchair for you.</p>
 						<br>
 						<address class="margin-bottom-30px">
 							<ul class="list-unstyled">
-								<li>1234 North Main Street
-									<br/> New York, NY 222222</li>
+								<li>1 Infinite Loop
+									<br/> Cupertino, CA 95014</li>
 								<li>Phone: (1800) 765 - 4321</li>
-								<li>Email: email@yourdomain.com</li>
+								<li>Email: contact@observermobility.com</li>
 							</ul>
 						</address>
 						<!-- END COLUMN 1 -->
@@ -232,20 +211,18 @@
 						<div class="row margin-bottom-30px">
 							<div class="col-xs-6">
 								<ul class="list-unstyled footer-nav">
-									<li><a href="#">About Us</a></li>
-									<li><a href="#">News</a></li>
-									<li><a href="#">Community</a></li>
-									<li><a href="#">Career</a></li>
-									<li><a href="#">Blog</a></li>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="aboutus.html">About</a></li>
+									<li><a href="4x4ElectricWheelchairs.html">4x4 Electric Wheelchairs</a></li>
+									<li><a href="accessories.html">Accessories</a></li>
+									<li><a href="videos.html">Videos</a></li>
 								</ul>
 							</div>
 							<div class="col-xs-6">
 								<ul class="list-unstyled footer-nav">
-									<li><a href="#">Press Kit</a></li>
-									<li><a href="#">FAQ</a></li>
-									<li><a href="#">Terms</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-									<li><a href="#">Contact Us</a></li>
+									<li><a href="pictures.html">Pictures</a></li>
+									<li><a href="customersupport.html">Customer Support</a></li>
+									<li><a href="contactUs.html">Contact Us</a></li>
 								</ul>
 							</div>
 						</div>
@@ -255,7 +232,7 @@
 						<!-- COLUMN 3 -->
 						<div class="newsletter">
 							<h3 class="footer-heading">NEWSLETTER</h3>
-							<p>Get the latest update from us by subscribing to our newsletter.</p>
+							<p>Get the latest Observer Mobility update by subscribing to our newsletter.</p>
 							<form class="newsletter-form" method="POST">
 								<div class="input-group input-group-lg">
 									<input type="email" class="form-control" name="email" placeholder="youremail@domain.com">
@@ -269,9 +246,8 @@
 							<h3 class="footer-heading">GET CONNECTED</h3>
 							<ul class="list-inline social-icons">
 								<li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" class="googleplus-bg"><i class="fa fa-google-plus"></i></a></li>
-								<li><a href="#" class="rss-bg"><i class="fa fa-rss"></i></a></li>
+								<li><a href="#" class="twitter-bg"><i class="fa fa-linkedin"></i></a></li>
+								<li><a href="#" class="googleplus-bg"><i class="fa fa-wechat"></i></a></li>
 							</ul>
 						</div>
 						<!-- END COLUMN 3 -->
@@ -280,7 +256,7 @@
 			</div>
 			<!-- COPYRIGHT -->
 			<div class="text-center copyright">
-				&copy;2016 The Develovers. All Rights Reserved.
+				&copy;2016 Observer Mobility. All Rights Reserved.
 			</div>
 			<!-- END COPYRIGHT -->
 		</footer>
