accessories page template adjusted

--- a/siliconBattery.html
+++ b/siliconBattery.html
@@ -89,7 +89,7 @@
 		<!-- END NAVBAR -->
 		<!-- BREADCRUMBS -->
 		<div class="page-header">
-			<div class="container">
+			<div class="container" style="margin-top: 25px;">
 				<h1 class="page-title pull-left">ACCESSORIES &amp; SPARE PARTS</h1>
 				<ol class="breadcrumb">
 					<li><a href="index.html">Home</a></li>
@@ -103,9 +103,9 @@
 			<div class="container">
 				<!-- PORTFOLIO ITEM -->
 				<div class="portfolio-media media-carousel">
-					<div><img src="assets/img/portfolio/800x800/accessories/silicone-power-battery.jpg" class="img-responsive" alt="Silicon Battery"></div>
-					<div><img src="assets/img/portfolio/800x800/accessories-copy/battery.jpg" class="img-responsive" alt="Silicon Battery"></div>
-					<div><img src="assets/img/portfolio/800x800/accessories/battery.jpg" class="img-responsive" alt="Silicon Battery"></div>
+					<div><img src="assets/img/portfolio/800x800/accessories/silicone-power-battery.jpg" style="width: 300px; height: 300px;" class="img-responsive" alt="Silicon Battery"></div>
+<!-- 					<div><img src="assets/img/portfolio/800x800/accessories-copy/battery.jpg" class="img-responsive" alt="Silicon Battery"></div>
+					<div><img src="assets/img/portfolio/800x800/accessories/battery.jpg" class="img-responsive" alt="Silicon Battery"></div> -->
 				</div>
 				<div class="row">
 					<div class="col-md-8">
