--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				</div>
 				<!-- MAIN NAVIGATION -->
 				<div id="main-nav" class="navbar-collapse collapse" style="margin-top: 25px; padding: 25px;">
-					<ul class="nav navbar-nav navbar-right">
+					<ul class="nav navbar-nav navbar-right" style="margin-top: 30px;">
 						<li>
 							<a href="index.html">HOME</a>
 						</li>
@@ -106,7 +106,7 @@
 			<div id="carousel-hero" class="slick-carousel">
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<img src="assets/img/sliders/slider3-h500.png" class="img-responsive" alt="Slider Image">
+						<img src="assets/img/201.jpg" class="img-responsive" alt="1200x400 Background Images">
 						<div class="carousel-caption">
 							<h2 class="hero-heading">CLEAN &amp; ELEGANT DESIGN</h2>
 							<p class="lead">Giving valuable reputation and credibility to your business</p>
@@ -114,7 +114,7 @@
 						</div>
 					</div>
 					<div class="item">
-						<img src="assets/img/sliders/slider2-h500.png" class="img-responsive" alt="Slider Image">
+						<img src="assets/img/202.jpg" class="img-responsive" alt="1200x400 Background Images">
 						<div class="carousel-caption">
 							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
 							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
@@ -122,7 +122,39 @@
 						</div>
 					</div>
 					<div class="item">
-						<img src="assets/img/sliders/slider1-h500.png" class="img-responsive" alt="Slider Image">
+						<img src="assets/img/203.jpg" class="img-responsive" alt="Slider Image">
+						<div class="carousel-caption">
+							<h2 class="hero-heading">EASY TO CUSTOMIZE</h2>
+							<p class="lead">Readable code, well documented and FREE support</p>
+							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
+						</div>
+					</div>
+					<div class="item">
+						<img src="assets/img/204.jpg" class="img-responsive" alt="1200x400 Background Images">
+						<div class="carousel-caption">
+							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
+							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
+							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
+						</div>
+					</div>
+					<div class="item">
+						<img src="assets/img/205.jpg" class="img-responsive" alt="Slider Image">
+						<div class="carousel-caption">
+							<h2 class="hero-heading">EASY TO CUSTOMIZE</h2>
+							<p class="lead">Readable code, well documented and FREE support</p>
+							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
+						</div>
+					</div>
+					<div class="item">
+						<img src="assets/img/206.jpg" class="img-responsive" alt="1200x400 Background Images">
+						<div class="carousel-caption">
+							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
+							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
+							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
+						</div>
+					</div>
+					<div class="item">
+						<img src="assets/img/203.jpg" class="img-responsive" alt="Slider Image">
 						<div class="carousel-caption">
 							<h2 class="hero-heading">EASY TO CUSTOMIZE</h2>
 							<p class="lead">Readable code, well documented and FREE support</p>
@@ -133,19 +165,15 @@
 			</div>
 		</section>
 		<!-- END HERO UNIT -->
+
+<!-- BEGIN LINE BREAK -->
+		<hr></hr>
+<!-- END LINE BREAK -->
+
 </div>
 </div>	
 </div>	
 
-<!-- BEGIN LINE BREAK -->
-	<div class="container">
-		<div class="row">
-			<div class="nav-line">
-				<hr>
-			</div>
-		</div>
-	</div>
-<!-- END LINE BREAK -->
 
 		<!-- BOXED CONTENT -->
 		<section>
@@ -153,7 +181,9 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="boxed-content">
-<img src="assets/img/101.jpg" class="inline-img" alt="Who We Are">
+<a href="4x4ElectricWheelchairs.html">
+<img src="assets/img/300-020-red.jpg" class="inline-img" alt="Who We Are">
+</a>
 							<!-- <i class="fa fa-wheelchair-alt"></i> -->
 							<h2 class="boxed-content-title">All TERRAIN</h2>
 							<p>The Observer works on roads which traditional wheelchairs simply can't. The Observer was engineered to handle rain, sand, mud, trails and much more.</p>
@@ -161,7 +191,9 @@
 					</div>
 					<div class="col-md-4">
 						<div class="boxed-content">
-<img src="assets/img/102.jpg" class="inline-img" alt="Image set to 520x340">
+<a href="4x4ElectricWheelchairs.html">
+<img src="assets/img/300-030-red.jpg" class="inline-img" alt="Image set to 520x340">
+</a>
 							<!-- <i class="fa fa-compass"></i> -->
 							<h2 class="boxed-content-title">ADJUSTING GRADIENTER EQUIPMENT</h2>
 							<p>When driving up and down stairs or hills, the Observer will keep your body in the same upright position as if driving along a flat surface. The Observer makes driving more comfortable and safe. Stairs and steps are not a problem for the Observer.</p>
@@ -169,7 +201,9 @@
 					</div>
 					<div class="col-md-4">
 						<div class="boxed-content">
-<img src="assets/img/103.jpg" class="inline-img" alt="Who We Are">
+<a href="4x4ElectricWheelchairs.html">
+<img src="assets/img/300-003-1-blue.jpg" class="inline-img" alt="Who We Are">
+</a>
 							<!-- <i class="fa fa-universal-access"></i> -->
 							<h2 class="boxed-content-title">DYNAMIC CHANGE</h2>
 							<p>Our engineers crated the perfect balance of modern technology, power, stability and reliability for each Observer model. Whatever your situation, we will open new possibilities for mobility.</p>
@@ -190,48 +224,7 @@
 	</div>
 <!-- END LINE BREAK -->
 
-		<!-- CAROUSEL -->
-		<section class="recent-works slick-carousel">
-			<div class="container">
-				<h2 class="section-heading">FEATURED PRODUCTS</h2>
-				<div class="portfolio-container">
-					<div class="portfolio-item">
-						<div class="overlay"></div>
-						<div class="info">
-							<h4 class="title">MAXIMUS</h4>
-							<p class="brief-description">OB-EW-001</p>
-							<a href="#" class="btn">read more</a>
-						</div>
-						<div class="media-wrapper">
-							<img src="assets/img/portfolio/800x500/001-green.jpg" alt="Item Thumbnail" />
-						</div>
-					</div>
-					<div class="portfolio-item">
-						<div class="overlay"></div>
-						<div class="info">
-							<h4 class="title">OFF ROAD</h4>
-							<p class="brief-description">OB-EW-002</p>
-							<a href="#" class="btn">read more</a>
-						</div>
-						<div class="media-wrapper">
-							<img src="assets/img/portfolio/800x500/002-blue.jpg" alt="Item Thumbnail" />
-						</div>
-					</div>
-					<div class="portfolio-item">
-						<div class="overlay"></div>
-						<div class="info">
-							<h4 class="title">OPTIMUS</h4>
-							<p class="brief-description">OB-EW-003</p>
-							<a href="#" class="btn">read more</a>
-						</div>
-						<div class="media-wrapper">
-							<img src="assets/img/portfolio/800x500/003-blue.jpg" alt="Item Thumbnail" />
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- END CAROUSEL -->
+
 
 		<!-- CALL-TO-ACTION -->
 		<section class="call-to-action">
