homepage revised for spreadsheet 3

--- a/index.html
+++ b/index.html
@@ -174,6 +174,58 @@
 </div>	
 </div>	
 
+		<!-- CAROUSEL -->
+		<section class="recent-works slick-carousel">
+			<div class="container">
+				<h2 class="section-heading">NOT FEATURED PRODUCTS</h2>
+				<div class="portfolio-container">
+					<div class="portfolio-item">
+						<div class="overlay"></div>
+						<div class="info">
+							<h4 class="title">MAXIMUS</h4>
+							<p class="brief-description">OB-EW-001</p>
+							<a href="4X4ElectricWheelchairs.html" class="btn">learn more</a>
+						</div>
+						<div class="media-wrapper">
+							<img src="assets/img/300-020-red.jpg" alt="First Not Featured Product" />
+						</div>
+					</div>
+					<div class="portfolio-item">
+						<div class="overlay"></div>
+						<div class="info">
+							<h4 class="title">OFF ROAD</h4>
+							<p class="brief-description">OB-EW-002</p>
+							<a href="4X4ElectricWheelchairs.html" class="btn">learn more</a>
+						</div>
+						<div class="media-wrapper">
+							<img src="assets/img/300-030-red.jpg" alt="Item Thumbnail" />
+						</div>
+					</div>
+					<div class="portfolio-item">
+						<div class="overlay"></div>
+						<div class="info">
+							<h4 class="title">OPTIMUS</h4>
+							<p class="brief-description">OB-EW-003</p>
+							<a href="4X4ElectricWheelchairs.html" class="btn">learn more</a>
+						</div>
+						<div class="media-wrapper">
+							<img src="assets/img/300-003-1-blue.jpg" alt="Item Thumbnail" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- END CAROUSEL -->
+
+<!-- BEGIN LINE BREAK -->
+	<div class="container">
+		<div class="row">
+			<div class="nav-line-1">
+				<hr>
+			</div>
+		</div>
+	</div>
+<!-- END LINE BREAK -->
 
 		<!-- BOXED CONTENT -->
 		<section>
@@ -181,32 +233,26 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="boxed-content">
-<a href="4x4ElectricWheelchairs.html">
-<img src="assets/img/300-020-red.jpg" class="inline-img" alt="Who We Are">
-</a>
+<img src="assets/img/101.jpg" class="inline-img" alt="Who We Are">
 							<!-- <i class="fa fa-wheelchair-alt"></i> -->
 							<h2 class="boxed-content-title">All TERRAIN</h2>
-							<p>The Observer works on roads which traditional wheelchairs simply can't. The Observer was engineered to handle rain, sand, mud, trails and much more.</p>
+							<p>Observer Wheelchairs work on terrain which traditional wheelchairs simply can't.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="boxed-content">
-<a href="4x4ElectricWheelchairs.html">
-<img src="assets/img/300-030-red.jpg" class="inline-img" alt="Image set to 520x340">
-</a>
+<img src="assets/img/102.jpg" class="inline-img" alt="Image set to 520x340">
 							<!-- <i class="fa fa-compass"></i> -->
-							<h2 class="boxed-content-title">ADJUSTING GRADIENTER EQUIPMENT</h2>
-							<p>When driving up and down stairs or hills, the Observer will keep your body in the same upright position as if driving along a flat surface. The Observer makes driving more comfortable and safe. Stairs and steps are not a problem for the Observer.</p>
+							<h2 class="boxed-content-title">SEAT BALANCING TECHNOLOGY</h2>
+							<p>When driving up and down stairs or hills, Observer Mobility Wheelchairs keep your seat and body in an upright position - as if driving along a flat surface. Observer Mobility makes driving more comfortable and safe on whatever road you wish to travel. </p>
 						</div> 
 					</div>
 					<div class="col-md-4">
 						<div class="boxed-content">
-<a href="4x4ElectricWheelchairs.html">
-<img src="assets/img/300-003-1-blue.jpg" class="inline-img" alt="Who We Are">
-</a>
+<img src="assets/img/103.jpg" class="inline-img" alt="Who We Are">
 							<!-- <i class="fa fa-universal-access"></i> -->
-							<h2 class="boxed-content-title">DYNAMIC CHANGE</h2>
-							<p>Our engineers crated the perfect balance of modern technology, power, stability and reliability for each Observer model. Whatever your situation, we will open new possibilities for mobility.</p>
+							<h2 class="boxed-content-title">ALL WHEEL DRIVE</h2>
+							<p>Observer Mobility's All Wheel Drive Wheelchairs and specialized tires allow you to get to those places that once seemed difficult. </p>
 						</div>
 					</div>
 				</div>
