media section of videos/flash added

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 <!-- BEGIN LINE BREAK -->
 	<div class="container">
 		<div class="row">
-			<div class="nav-line-1">
+			<div class="col-md-12">
 				<hr>
 			</div>
 		</div>
@@ -263,12 +263,39 @@
 <!-- BEGIN LINE BREAK -->
 	<div class="container">
 		<div class="row">
-			<div class="nav-line">
+			<div class="col-md-12">
 				<hr>
 			</div>
 		</div>
 	</div>
 <!-- END LINE BREAK -->
+
+		<!-- BOXED CONTENT -->
+		<section>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6">
+						<div class="boxed-content">
+<embed src="Observer_eng.swf" style="width: 560px; height: 315px"alt="All Terrain">
+							<!-- <i class="fa fa-wheelchair-alt"></i> -->
+							<h2 class="boxed-content-title">All TERRAIN</h2>
+							<p>Observer Wheelchairs work on terrain which traditional wheelchairs simply can't.</p>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="boxed-content">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rL07V_I7dko" frameborder="0" allowfullscreen></iframe>
+
+							<!-- <i class="fa fa-compass"></i> -->
+							<h2 class="boxed-content-title">SEAT BALANCING TECHNOLOGY</h2>
+							<p>When driving up and down stairs or hills, Observer Mobility Wheelchairs keep your seat and body in an upright position - as if driving along a flat surface. Observer Mobility makes driving more comfortable and safe on whatever road you wish to travel. </p>
+						</div> 
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- END BOXED CONTENT -->
+
 
 
 
